--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^6.2.1",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
