--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
+    "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
     "xlsx": "^0.18.5"
   },
